--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 23
     defaultConfig {
         applicationId "com.example.vladislav.ccash"
-        minSdkVersion 15
+        minSdkVersion 20
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -17,6 +17,8 @@ android {
         }
     }
     buildToolsVersion '27.0.3'
+    productFlavors {
+    }
 }
 
 dependencies {
@@ -26,9 +28,9 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:cardview-v7:23.+'
     implementation 'com.google.zxing:core:3.2.1'
-
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     implementation 'com.android.support:recyclerview-v7:23.0.0'
     implementation 'com.android.support:gridlayout-v7:23.0.0'
+    implementation 'me.dm7.barcodescanner:zxing:1.8.4'
 }
