--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:23.0.0'
     implementation 'com.android.support:gridlayout-v7:23.0.0'
     implementation 'me.dm7.barcodescanner:zxing:1.8.4'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 }
