--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     implementation 'com.android.support:gridlayout-v7:23.0.0'
     implementation 'me.dm7.barcodescanner:zxing:1.8.4'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
+    implementation 'com.google.android.gms:play-services-ads:15.0.0'
 }
