Add Invest implemented and finished.
Only two buttons are left to code before beta-release.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,3 +36,13 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
     implementation 'com.google.android.gms:play-services-ads:15.0.0'
 }
+configurations.all {
+    resolutionStrategy.eachDependency { DependencyResolveDetails details ->
+        def requested = details.requested
+        if (requested.group == 'com.android.support') {
+            if (!requested.name.startsWith("multidex")) {
+                details.useVersion '23.0.0'
+            }
+        }
+    }
+}
